--- a/index.html
+++ b/index.html
@@ -4,164 +4,89 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>The Buttons Project Singapore - Towards healing from abortion</title>
     <link rel="stylesheet" href="css/app.css">
+    <link href="https://fonts.googleapis.com/css?family=Arsenal|Bitter" rel="stylesheet">
   </head>
   <body>
-    <div class="row">
-      <div class="large-12 columns">
-        <h1>Welcome to Foundation</h1>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="large-12 columns">
-        <div class="callout">
-          <h3>We&rsquo;re stoked you want to try Foundation! </h3>
-          <p>To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
-          <p>Once you've exhausted the fun in this document, you should check out:</p>
-          <div class="row">
-            <div class="large-4 medium-4 columns">
-              <p><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</p>
-            </div>
-            <div class="large-4 medium-4 columns">
-              <p><a href="http://zurb.com/university/code-skills">Foundation Code Skills</a><br />These online courses offer you a chance to better understand how Foundation works and how you can master it to create awesome projects.</p>
-            </div>
-            <div class="large-4 medium-4 columns">
-              <p><a href="http://foundation.zurb.com/forum">Foundation Forum</a><br />Join the Foundation community to ask a question or show off your knowlege.</p>
-            </div>
+    <header class="row fullWidth" data-sticky-container>
+      <div class="nav-container" data-sticky data-options="marginTop:0;" style="width:100%" data-top-anchor="1">
+        <nav class="small-12 column">
+          <div class="title-bar-left">
+            <img src="img/logo.png" alt="Buttons Project SG">
           </div>
-          <div class="row">
-            <div class="large-4 medium-4 medium-push-2 columns">
-              <p><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</p>
-            </div>
-            <div class="large-4 medium-4 medium-pull-2 columns">
-              <p><a href="https://twitter.com/ZURBfoundation">@zurbfoundation</a><br />Ping us on Twitter if you have questions. When you build something with this we'd love to see it (and send you a totally boss sticker).</p>
-            </div>
-          </div>
-        </div>
+          <ul class="vertical medium-horizontal menu title-bar-right">
+            <li><a href="#">About</a></li>
+            <li><a href="#">See The Buttons</a></li>
+            <li><a href="#">Send A Button</a></li>
+            <li><a href="#">Support Group</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </nav>
       </div>
-    </div>
+    </header>
 
-    <div class="row">
-      <div class="large-8 medium-8 columns">
-        <h5>Here&rsquo;s your basic grid:</h5>
-        <!-- Grid Example -->
-
+    <section class="hero">
         <div class="row">
-          <div class="large-12 columns">
-            <div class="primary callout">
-              <p><strong>This is a twelve column section in a row.</strong> Each of these includes a div.callout element so you can see where the columns are - it's not required at all for the grid.</p>
-            </div>
+          <div class="small-12 columns headline">
+            <h1>What happened mattered</h1>
+            <h2>A way to remember, to grieve and to love.</h2>
           </div>
         </div>
-        <div class="row">
-          <div class="large-6 medium-6 columns">
-            <div class="primary callout">
-              <p>Six columns</p>
-            </div>
-          </div>
-          <div class="large-6 medium-6 columns">
-            <div class="primary callout">
-              <p>Six columns</p>
-            </div>
+    </section>
+
+    <main>
+      <div class="row main-content">
+        <div class="row fullWidth healing">
+          <div class="small-12 column">
+            <h2 class="centered">Towards healing from abortion</h2>
           </div>
         </div>
-        <div class="row">
-          <div class="large-4 medium-4 small-4 columns">
-            <div class="primary callout">
-              <p>Four columns</p>
-            </div>
+        <div class="row healing-body">
+          <div class="large-6 medium-12 column">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia laudantium minus, aspernatur id illo. Consequuntur dicta deleniti quia non, ullam voluptas explicabo aliquid. Eligendi repellendus nulla ipsa, earum nisi magni?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum unde ipsam commodi ducimus maiores. Saepe est quo, nulla a cumque voluptas libero maxime dolores reiciendis omnis, facere laudantium tenetur quod?</p>
+            <blockquote cite="http://buttonsproject.org">
+              “Through my own abortion experience I have come to realise many women feel the same—that it can be difficult to gain any sense of closure. There is no grave to visit, no tangible way of remembering. Until now.” – Marina Young
+            </blockquote>
           </div>
-          <div class="large-4 medium-4 small-4 columns">
-            <div class="primary callout">
-              <p>Four columns</p>
-            </div>
-          </div>
-          <div class="large-4 medium-4 small-4 columns">
-            <div class="primary callout">
-              <p>Four columns</p>
-            </div>
+          <div class="large-6 medium-12 column">
+            <iframe src="https://player.vimeo.com/video/16036821" width=100% height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
         </div>
 
-        <hr />
+        <div class="row about-project">
+          <div class="small-12 column">
+            <h2>What Buttons Project SG is about</h2>
+          </div>
+          <div class="small-12 medium-5 column">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inven tore quasi sequi suscipit quas repre henderit ad, optio vero laudantium dolorem obcaecati maiores similique deserunt aspernatur, pariatur sapiente, illum incidunt necessitatibus dolorum.</p>
+          </div>
+          <div class="small-12 medium-6 medium-offset-1 centered why-button">
+            <h4><img src="img/red-button.png" alt="a red button">Why buttons?</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus nulla aliquam velit officia!</p>
+          </div>
+        </div>
 
-        <h5>We bet you&rsquo;ll need a form somewhere:</h5>
-        <form>
-          <div class="row">
-            <div class="large-12 columns">
-              <label>Input Label</label>
-              <input type="text" placeholder="large-12.columns" />
-            </div>
+        <div class="row my-journey">
+          <div class="small-12 medium-7 column">
+            <h2>My Journey</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id impedit ea fugit, officia, atque rerum sunt beatae obcaecati reiciendis. Perspiciatis placeat, repudiandae eius laudantium autem obcaecati quod, ipsa debitis sapiente.</p>
           </div>
-          <div class="row">
-            <div class="large-4 medium-4 columns">
-              <label>Input Label</label>
-              <input type="text" placeholder="large-4.columns" />
-            </div>
-            <div class="large-4 medium-4 columns">
-              <label>Input Label</label>
-              <input type="text" placeholder="large-4.columns" />
-            </div>
-            <div class="large-4 medium-4 columns">
-              <div class="row collapse">
-                <label>Input Label</label>
-                <div class="input-group">
-                  <input type="text" placeholder="small-9.columns" class="input-group-field" />
-                  <span class="input-group-label">.com</span>
-                </div>
-              </div>
-            </div>
+          <div class="small-12 medium-10 column">
+            <img src="img/profile.jpg" alt="">
           </div>
-          <div class="row">
-            <div class="large-12 columns">
-              <label>Select Box</label>
-              <select>
-                <option value="husker">Husker</option>
-                <option value="starbuck">Starbuck</option>
-                <option value="hotdog">Hot Dog</option>
-                <option value="apollo">Apollo</option>
-              </select>
-            </div>
+          <div class="small-12 medium-2 column about-me">
+            <h4>About me</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam, molestiae qui, ducimus ipsum quasi, non nesciunt unde eaque pariatur consequuntur dolores laborum. Eum mollitia, voluptatibus, nostrum dolore asperiores labore voluptatem.</p>
           </div>
-          <div class="row">
-            <div class="large-6 medium-6 columns">
-              <label>Choose Your Favorite</label>
-              <input type="radio" name="pokemon" value="Red" id="pokemonRed"><label for="pokemonRed">Radio 1</label>
-              <input type="radio" name="pokemon" value="Blue" id="pokemonBlue"><label for="pokemonBlue">Radio 2</label>
-            </div>
-            <div class="large-6 medium-6 columns">
-              <label>Check these out</label>
-              <input id="checkbox1" type="checkbox"><label for="checkbox1">Checkbox 1</label>
-              <input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label>
-            </div>
           </div>
-          <div class="row">
-            <div class="large-12 columns">
-              <label>Textarea Label</label>
-              <textarea placeholder="small-12.columns"></textarea>
-            </div>
-          </div>
-        </form>
-      </div>
-
-      <div class="large-4 medium-4 columns">
-        <h5>Try one of these buttons:</h5>
-        <p><a href="#" class="button">Simple Button</a><br/>
-        <a href="#" class="success button">Success Btn</a><br/>
-        <a href="#" class="alert button">Alert Btn</a><br/>
-        <a href="#" class="secondary button">Secondary Btn</a></p>
-        <div class="callout">
-          <h5>So many components, girl!</h5>
-          <p>A whole kitchen sink of goodies comes with Foundation. Check out the docs to see them all, along with details on making them your own.</p>
-          <a href="http://foundation.zurb.com/sites/docs/" class="small button">Go to Foundation Docs</a>
         </div>
       </div>
-    </div>
+    </main>
+    <footer class="centered">2017 all rights reserved</footer>
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/what-input/dist/what-input.js"></script>
     <script src="bower_components/foundation-sites/dist/js/foundation.js"></script>
     <script src="js/app.js"></script>
   </body>
